<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:gravity="center|top"
    android:orientation="vertical"
android:visibility="invisible"
    android:padding="@dimen/margin_large">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/iv_weather_icon"
                android:layout_width="@dimen/weather_image_width"
                android:layout_height="@dimen/weather_image_height"
                android:gravity="center"
                android:src="@drawable/weather" />

            <TextView
                android:id="@+id/tv_curent_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"

                android:textColor="@color/black"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/iv_btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@null"
                android:padding="@dimen/margin_small"
                android:background="@drawable/settings" />

            <TextView
                android:id="@+id/tv_city_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium" />


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/gray_dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/sun_rise_set"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_sun_rise_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:text="@string/moon_rise_set"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_moon_rise_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/temp_in_cel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_temp_in_cel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"

                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/temp_in_for"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_temp_in_for"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"

                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/cloud_cover"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_cloud_cover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/feels_like"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_feels_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"

                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/pressure"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"

                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/visibility"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_visibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"

                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/wind_speed"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_wind_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"

                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/wind_dir"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_wind_dir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"

                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/uv_index"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_uv_index"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:singleLine="true"

                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </TableRow>


        </TableLayout>


    </ScrollView>


</LinearLayout>
